--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,6 +31,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -39,5 +41,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.0' // Sesuaikan versi jika perlu
-
+    implementation 'com.google.firebase:firebase-auth:21.0.8'
 }
