--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,10 @@
             android:name=".jadwaldokter.UpdateJadwal"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".user.ViewUser"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
