--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".rawatjalan.ViewAntrian"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".riwayatmedis.RiwayatMedis"
             android:exported="true">
         </activity>
@@ -94,6 +98,10 @@
         </activity>
         <activity
             android:name=".user.ViewUser"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".user.UpdateUser"
             android:exported="true">
         </activity>
     </application>
