adding add riwayat medis, -view riwayat medis

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,11 @@
             android:exported="true">
         </activity>
         <activity
-            android:name=".riwayatmedis.RiwayatMedis"
+            android:name=".riwayatmedis.ViewRiwayatMedis"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".riwayatmedis.AddRiwayatMedis"
             android:exported="true">
         </activity>
         <activity
